Fix table horizontal alignment

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ form {
 }
 
 .table {
+	margin: 0 auto;
 	border: 1px solid white;
 }
 
